# bugsy_2025

./: .gitignore  README.md  color_log.txt  dom_graph.html  dom_structure.json  main.py  pyproject.toml  requirements.txt  results_lists_of_cases.md  results_test_cases.md  retag_main.py  run_compact_dom.py  run_extract_dom.py  run_smart_chunker.py  run_split.py  search_semantic.py  tag_graph_search.py
bugsy_2025.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chunker/: chunker.py  extract.py  extract_terms.py  filter_tag_chunks.py  normalize_tags.py  retag_by_concepts.py  retag_chunks.py  structure.py  tag_chunks.py
data/: candidate_terms.json  candidate_terms_cleaned.json  concept_graph.html  concept_graph.json  dom_structure.json  embeddings.npy  faiss_index.index  structured_chunks.json  structured_chunks_final_tagged.json  structured_chunks_retagged.json  structured_chunks_tagged.json  structured_chunks_tagged_cleaned.json  tag_frequencies_normalized.json
dom/: chunker.py  cleaner.py  export.py  structure.py
graph_search/: build_graph.py  search_engine.py  semantic_expander.py  utils_graph.py
notebooks/: prompt_generation.ipynb
preprocessing/: extract_terms.py  filter_tag_chunks.py  normalize_tags.py  retag_by_concepts.py  retag_chunks.py  search_engine.py  semantic_expander.py  tag_chunks.py
prompts_with_results/: prompt_builder.py
scripts/: build_concept_graph.py  clusterisation.py  export_graph.py  html_graph.py  search_chunks.py  test_extract.py
search_results/: results_with_semantic_expander.json  (+1 more)
semantic/: indexer.py  search.py
(+62 files in other folders)
